update visualization & conclusion

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
         "# Proyek Analisis Data: Bike Sharing\n",
         "- **Nama:** Alifia Mustika Sari\n",
         "- **Email:** alifiamustika02@gmail.com\n",
-        "- **ID Dicoding:** a463xbf048"
+        "- **ID Dicoding:** alouvre"
       ]
     },
     {
@@ -18,7 +18,7 @@
         "id": "eE0raob58DC0"
       },
       "source": [
-        "## 1. Menentukan Pertanyaan Bisnis (FIX)"
+        "## 1. Menentukan Pertanyaan Bisnis (DONE)"
       ]
     },
     {
@@ -29,7 +29,7 @@
       "source": [
         "Pertama-tama, kita akan mendefinisikan berbagai pertanyaan bisnis yang akan dibutuhkan saat eksplorasi data.\n",
         "- `Pertanyaan 1:` Bagaimana Tren Jumlah Penggunaan Layanan Bike-Sharing dalam Beberapa Tahun Terakhir? (DONE)\n",
-        "- `Pertanyaan 2:` Apakah Peningkatan Penggunaan Layanan Bike-Sharing Berasal dari Pengguna Registered atau Casual? (FIX)\n",
+        "- `Pertanyaan 2:` Apakah Peningkatan Penggunaan Layanan Bike-Sharing Berasal dari Pengguna Registered atau Casual? (DONE)\n",
         "- `Pertanyaan 3:` Bagaimana Pola Penggunaan Layanan Bike-Sharing Berdasarkan Waktu Dalam Sehari? (DONE)\n",
         "- `Pertanyaan 4:` Seberapa Berpengaruh Musim Terhadap Peningkatan Jumlah Penggunaan Layanan Bike-Sharing? (DONE)"
       ]
@@ -73,7 +73,7 @@
         "id": "sXU2GBYu8DC1"
       },
       "source": [
-        "### 3.1. Gathering Data"
+        "### 3.1. Gathering Data (FIX)"
       ]
     },
     {
@@ -3121,6 +3121,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "**Insight:**\n",
         "- Berdasarkan hasil pengamatan grafik diatas, dapat dilihat bahwa jumlah peminjaman sepeda pada tahun 2012 meningkat lebih tinggi dibandingkan tahun 2011. Hal ini menunjukkan jumlah pengguna layanan bike-sharing meningkat dari tahun ke tahun.\n",
         "- Terdapat pola musiman dalam tren peminjaman sepeda selama dua tahun tersebut. Telihat pola pada awal tahun (Januari - Maret) peminjaman masih rendah, pada kuartal kedua (April-Juni) peminjaman mulai meningkat, pada kuartal keempat (Oktober-Desember) peminjaman mulai menurun lagi."
       ]
@@ -3165,6 +3166,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "**Insight:**\n",
         "- Berdasarkan hasil pengamatan dari grafik diatas menunjukkan jumlah peminjaman sepeda oleh dua tipe pengguna yaitu Casual (warna abu-abu) dan Registered (warna merah).\n",
         "- Pengguna Casual mengalami kenaikan peminjaman, tetapi peningkatannya relatif kecil dibandingkan pengguna registered. Pengguna Registered menunjukkan peningkatan yang sangat signifikan dari 2011 ke 2012, dengan jumlah peminjaman jauh lebih tinggi dibandingkan pengguna casual.\n",
         "- Dapat disimpulkan bahwa peningkatan terbesar dalam penggunaan layanan bike-sharing berasal dari pengguna Registered. Hal ini menunjukkan bahwa lebih banyak orang mendaftar sebagai pengguna tetap dan lebih sering menggunakan layanan ini dibandingkan tahun sebelumnya. Meskipun pengguna Casual juga meningkat, kontribusinya terhadap total peningkatan tidak sebesar pengguna Registered.\n",
@@ -3217,7 +3219,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berdasarkan hasil pengamatan pada grafik diatas, terlihat sangat jelas bahwa pola penggunaan layanan bike-sharing berdasarkan jam dalam sehari. Jumlah peminjaman sepeda mencapai puncaknya pada pukul 08.00 dan 17.00. Hal ini menunjukkan sebagian besar pengguna menggunakan sepeda untuk berangkat dan pulang kerja."
+        "**Insight:** Berdasarkan hasil pengamatan pada grafik diatas, terlihat sangat jelas bahwa pola penggunaan layanan bike-sharing berdasarkan jam dalam sehari. Jumlah peminjaman sepeda mencapai puncaknya pada pukul 08.00 dan 17.00. Hal ini menunjukkan sebagian besar pengguna menggunakan sepeda untuk berangkat dan pulang kerja."
       ]
     },
     {
@@ -3281,18 +3283,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berdasarkan hasil pengamatan dari grafik diatas, dapat kita lihat jumlah peminjaman sepeda paling tinggi terjadi saat musim gugur (Fall). Hal ini menunjukkan bahwa penggunaan sepeda cenderung mencapai puncaknya di musim gugur, kemungkinan karena kondisi cuaca yang mendukung."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_0-36BDLklRg"
-      },
-      "source": [
         "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "Berdasarkan hasil pengamatan dari grafik diatas, dapat kita lihat jumlah peminjaman sepeda paling tinggi terjadi saat musim gugur (Fall). Hal ini menunjukkan bahwa penggunaan sepeda cenderung mencapai puncaknya di musim gugur, kemungkinan karena kondisi cuaca yang mendukung."
       ]
     },
     {
@@ -3368,6 +3360,13 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_WeHlCeX8DC2"
@@ -3382,8 +3381,20 @@
         "id": "ZTcyR48Y8DC2"
       },
       "source": [
-        "- Conclution pertanyaan 1\n",
-        "- Conclution pertanyaan 2"
+        "- `Pertanyaan 1:` Bagaimana Tren Jumlah Penggunaan Layanan Bike-Sharing dalam Beberapa Tahun Terakhir?\n",
+        "- `Pertanyaan 2:` Apakah Peningkatan Penggunaan Layanan Bike-Sharing Berasal dari Pengguna Registered atau Casual?\n",
+        "- `Pertanyaan 3:` Bagaimana Pola Penggunaan Layanan Bike-Sharing Berdasarkan Waktu Dalam Sehari?\n",
+        "- `Pertanyaan 4:` Seberapa Berpengaruh Musim Terhadap Peningkatan Jumlah Penggunaan Layanan Bike-Sharing?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `Conclution pertanyaan 1:` \n",
+        "- `Conclution pertanyaan 2:` \n",
+        "- `Conclution pertanyaan 3:` \n",
+        "- `Conclution pertanyaan 4:` "
       ]
     }
   ],
