--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2238,7 +2238,7 @@
         "id": "gp-Y6wU38DC1"
       },
       "source": [
-        "## 4. Exploratory Data Analysis (EDA)"
+        "## 4. Exploratory Data Analysis (EDA) (DONE)"
       ]
     },
     {
@@ -2247,7 +2247,7 @@
         "id": "MW7WF2kr8DC1"
       },
       "source": [
-        "### 4.1. Eksplorasi Data df_day"
+        "### 4.1. Eksplorasi Data df_day (DONE)"
       ]
     },
     {
@@ -2255,6 +2255,13 @@
       "metadata": {},
       "source": [
         "#### 4.1.1. Analisis Penggunaan Layanan Bike-Sharing dalam Tren Tahunan (DONE)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Kita akan mengeksplorasi bagaimana jumlah pengguna casual, registered, dan total peminjaman sepeda berkembang setiap bulannya dengan mengidentifikasi lonjakan dan penurunan jumlah pengguna."
       ]
     },
     {
@@ -2491,7 +2498,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berdasarkan pivot table diatas dapat diketahui bahwa jumlah peminjaman sepeda pada tahun 2012 meningkat lebih tinggi dibandingkan tahun 2011."
+        "Berdasarkan pivot table diatas dapat diketahui bahwa jumlah peminjaman sepeda pada tahun 2012 meningkat lebih tinggi dibandingkan tahun 2011. Pengguna registered mengalami pertumbuhan lebih cepat dibanding casual, yang menunjukkan keberhasilan strategi retensi pelanggan."
       ]
     },
     {
@@ -2828,208 +2835,75 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 4.2. Eksplorasi Data df_hour"
+        "### 4.2. Eksplorasi Data df_hour (DONE)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### 4.2.1. Analisis Pola Penggunaan Sepeda Per Jam"
+        "#### 4.2.1. Analisis Pola Penggunaan Sepeda Per Jam (DONE)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Salah satu aspek penting dalam memahami pola penggunaan layanan bike-sharing adalah melihat distribusi peminjaman berdasarkan jam dalam sehari dengan mengidentifikasi jam-jam sibuk (peak hours) untuk optimalisasi layanan."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>hour</th>\n",
-              "      <th>count_rent</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>39130</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>24164</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>16352</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>8174</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>4428</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>5</td>\n",
-              "      <td>14261</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>6</td>\n",
-              "      <td>55132</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>7</td>\n",
-              "      <td>154171</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>8</td>\n",
-              "      <td>261001</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>9</td>\n",
-              "      <td>159438</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>10</td>\n",
-              "      <td>126257</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>11</td>\n",
-              "      <td>151320</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>12</td>\n",
-              "      <td>184414</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>13</td>\n",
-              "      <td>184919</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>14</td>\n",
-              "      <td>175652</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>15</td>\n",
-              "      <td>183149</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>16</td>\n",
-              "      <td>227748</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>17</td>\n",
-              "      <td>336860</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>18</td>\n",
-              "      <td>309772</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>19</td>\n",
-              "      <td>226789</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>20</th>\n",
-              "      <td>20</td>\n",
-              "      <td>164550</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>21</th>\n",
-              "      <td>21</td>\n",
-              "      <td>125445</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>22</td>\n",
-              "      <td>95612</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>23</th>\n",
-              "      <td>23</td>\n",
-              "      <td>63941</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "    hour  count_rent\n",
-              "0      0       39130\n",
-              "1      1       24164\n",
-              "2      2       16352\n",
-              "3      3        8174\n",
-              "4      4        4428\n",
-              "5      5       14261\n",
-              "6      6       55132\n",
-              "7      7      154171\n",
-              "8      8      261001\n",
-              "9      9      159438\n",
-              "10    10      126257\n",
-              "11    11      151320\n",
-              "12    12      184414\n",
-              "13    13      184919\n",
-              "14    14      175652\n",
-              "15    15      183149\n",
-              "16    16      227748\n",
-              "17    17      336860\n",
-              "18    18      309772\n",
-              "19    19      226789\n",
-              "20    20      164550\n",
-              "21    21      125445\n",
-              "22    22       95612\n",
-              "23    23       63941"
+              "hour\n",
+              "0      39130\n",
+              "1      24164\n",
+              "2      16352\n",
+              "3       8174\n",
+              "4       4428\n",
+              "5      14261\n",
+              "6      55132\n",
+              "7     154171\n",
+              "8     261001\n",
+              "9     159438\n",
+              "10    126257\n",
+              "11    151320\n",
+              "12    184414\n",
+              "13    184919\n",
+              "14    175652\n",
+              "15    183149\n",
+              "16    227748\n",
+              "17    336860\n",
+              "18    309772\n",
+              "19    226789\n",
+              "20    164550\n",
+              "21    125445\n",
+              "22     95612\n",
+              "23     63941\n",
+              "Name: count_rent, dtype: int64"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Mengelompokkan jumlah peminjaman per jam\n",
-        "hourly_data = df_hour.groupby(\"hour\")[\"count_rent\"].sum().reset_index()\n",
+        "hourly_data = df_hour.groupby(\"hour\")[\"count_rent\"].sum()\n",
         "hourly_data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dari informasi diatas, terlihat bahwa volume peminjaman meningkat dratis pada pagi dan sore hari. Jam sibuk terjadi pada pukul 08.00 dan 17.00, kemungkinan besar karena pengguna berangkat kerja/sekolah dan pulang kerja/sekolah."
       ]
     },
     {
@@ -3093,6 +2967,15 @@
         "rush_hours = [8, 17]  # Pagi jam 08:00 dan sore jam 17:00\n",
         "rush_data = hourly_data[hourly_data[\"hour\"].isin(rush_hours)]\n",
         "rush_data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 94,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "hourly_data = hourly_data.reset_index()"
       ]
     },
     {
