--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3213,7 +3213,7 @@
         "id": "9y4VUsmcYNZ5"
       },
       "source": [
-        "## 6. Menerapkan Analisis Lanjutan"
+        "## 6. Menerapkan Analisis Lanjutan (DONE)"
       ]
     },
     {
@@ -3269,7 +3269,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 2. Analisis Clustering"
+        "### 2. Analisis Clustering (DONE)"
       ]
     },
     {
@@ -3280,11 +3280,98 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "Berdasarkan analisis sebelumnya disebutkan bahwa kemungkinan faktor cuaca merupakan salah satu faktor pada lonjakan penggunaan sepeda di musim gugur. Untuk itu, kita akan menganalisis lebih lanjut dengan mengelompokkan data total pengguna berdasarkan kondisi cuaca."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 96,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_4348\\2747259310.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "  df_hour.groupby(by=\"weather_condition\").count_rent.nunique().sort_values(ascending=False).reset_index()\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>weather_condition</th>\n",
+              "      <th>count_rent</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Clear</td>\n",
+              "      <td>848</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Misty</td>\n",
+              "      <td>649</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Light Snow</td>\n",
+              "      <td>368</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Heavy Rain</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  weather_condition  count_rent\n",
+              "0             Clear         848\n",
+              "1             Misty         649\n",
+              "2        Light Snow         368\n",
+              "3        Heavy Rain           3"
+            ]
+          },
+          "execution_count": 96,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_hour.groupby(by=\"weather_condition\").count_rent.nunique().sort_values(ascending=False).reset_index()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dari hasil pengamatan diatas menunjukkan bahwa pengguna lebih banyak menggunakan layanan bike-sharing saat hari-hari cerah dan hanya sedikit pengguna yang menyewa saat hujan deras."
+      ]
     },
     {
       "cell_type": "markdown",
